--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -383,9 +383,7 @@
                     Penyelesaian tempoh baki pembelian rumah
                 </p>
                 <hr>
-                <a href="javascript:;" class="btn btn-purchase">
-                    Purchase now
-                </a>
+                @Html.ActionLink("Request POS", "Create", "PosRequests", null, new { @class = "btn btn-purchase" })
             </div>
         </div>
     </div>
