--- a/Views/Shared/MenuAdmin.cshtml
+++ b/Views/Shared/MenuAdmin.cshtml
@@ -10,4 +10,5 @@
     <li><a href="/AffiliateComissions"><i class="fa fa-tags"></i>AffiliateComissions</a></li>
     <li><a href="/Sak"><i class="fa fa-tags"></i>SAK</a></li>
     <li><a href="/Sk"><i class="fa fa-tags"></i>SK</a></li>
+    <li><a href="/Menus"><i class="fa fa-tags"></i>Menus</a></li>
 }
