--- a/Views/Listing/Index.cshtml
+++ b/Views/Listing/Index.cshtml
@@ -142,191 +142,49 @@
 
                 <div class="col-lg-3">
                     <div class="blog-side-item">
+                        
+
                         <div class="category">
                             <h3>
-                                Categories
+                                <i class="fa fa-gavel"></i> Page Link
                             </h3>
                             <ul class="list-unstyled">
-                                <li>
-                                    <a href="javascript:;">
-                                        <i class="fa fa-angle-right pr-10">
-                                        </i>
-                                        Animals
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="javascript:;">
-                                        <i class="fa fa-angle-right pr-10">
-                                        </i>
-                                        Landscape
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="javascript:;">
-                                        <i class="fa fa-angle-right pr-10">
-                                        </i>
-                                        Portait
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="javascript:;">
-                                        <i class="fa fa-angle-right pr-10">
-                                        </i>
-                                        Wild Life
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="javascript:;">
-                                        <i class="fa fa-angle-right pr-10">
-                                        </i>
-                                        Video
-                                    </a>
-                                </li>
+                                @Html.Partial("MainMenu")
                             </ul>
                         </div>
 
                         <div class="blog-post">
                             <h3>
-                                Latest Blog Post
+                                <i class="fa fa-bullhorn"></i> Announcement
+
                             </h3>
-                            <div class="media">
-                             
-                                <div class="media-body">
-                                    <h5 class="media-heading">
-                                        <a href="javascript:;">
-                                            02 May 2014
-                                        </a>
-                                    </h5>
-                                    <p>
-                                        Donec id elit non mi porta gravida at eget metus amet int
-                                    </p>
+
+                            @foreach (var item in Model.FirstOrDefault().NewsList)
+                            {
+                                <div class="media">
+                                    <div class="media-body">
+                                        <h5 class="media-heading">
+                                            <strong>@item.DateCreated.ToShortDateString()</strong>
+                                        </h5>
+
+                                        @Html.Raw(item.Content)
+
+                                        <a href="@item.Link" target="_blank">Read More</a>
+                                    </div>
                                 </div>
-                            </div>
-                           
-                          
-                        </div>
+                            }
 
-                        <div class="tags">
-                            <h3>
-                                Tags
-                            </h3>
-                            <ul class="tag">
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-tags pr-5">
-                                        </i>
-                                        flat
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-tags pr-5">
-                                        </i>
-                                        clean
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-tags pr-5">
-                                        </i>
-                                        admin
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-tags pr-5">
-                                        </i>
-                                        UI
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-tags pr-5">
-                                        </i>
-                                        responsive
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-tags pr-5">
-                                        </i>
-                                        Web Design
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-tags pr-5">
-                                        </i>
-                                        UIX
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-tags pr-5">
-                                        </i>
-                                        Blog
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-tags pr-5">
-                                        </i>
-                                        flat Admin
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-tags pr-5">
-                                        </i>
-                                        Dashboard
-                                    </a>
-                                </li>
-                            </ul>
+
+
+
                         </div>
 
 
-                        <div class="archive">
-                            <h3>
-                                Archive
-                            </h3>
-                            <ul class="list-unstyled">
-                                <li>
-                                    <a href="javascript:;">
-                                        <i class="fa fa-angle-double-right pr-10">
-                                        </i>
-                                        May 2014
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="javascript:;">
-                                        <i class="fa fa-angle-double-right pr-10">
-                                        </i>
-                                        April 2014
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="javascript:;">
-                                        <i class="fa fa-angle-double-right pr-10">
-                                        </i>
-                                        March 2014
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="javascript:;">
-                                        <i class="fa fa-angle-double-right pr-10">
-                                        </i>
-                                        February 2014
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="javascript:;">
-                                        <i class="fa fa-angle-double-right pr-10">
-                                        </i>
-                                        January 2014
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
+
+                        
+
+
+                        
 
 
                     </div>
