--- a/Views/Shared/Menu.cshtml
+++ b/Views/Shared/Menu.cshtml
@@ -1,6 +1,6 @@
 ﻿<li>
-    @Html.ActionLink("About  Us", "About", "Home")
+    @Html.ActionLink("About  Us", "Article", "Home", new { articleKod = "ARTCL_TYPE_ABOUT" }, null)
 </li>
 <li>
-    @Html.ActionLink("Blog", "About", "Home")
+    @Html.ActionLink("Blog", "Index", "Blog")
 </li>
