--- a/Views/Shared/_LayoutHome.cshtml
+++ b/Views/Shared/_LayoutHome.cshtml
@@ -115,13 +115,7 @@
                     <h1>
                         ABOUT @MyConstant.Web_Name
                     </h1>
-                    <address>
-                        <p><i class="fa fa-home pr-10"></i>Address: No.XXXXXX street</p>
-                        <p><i class="fa fa-globe pr-10"></i>Mars city, Country </p>
-                        <p><i class="fa fa-mobile pr-10"></i>Mobile : (123) 456-7890 </p>
-                        <p><i class="fa fa-phone pr-10"></i>Phone : (123) 456-7890 </p>
-                        <p><i class="fa fa-envelope pr-10"></i>Email :   <a href="javascript:;">supportSample.com</a></p>
-                    </address>
+                    @Html.Action("Test", "Home")
                 </div>
                 
                 <div class="col-lg-4 col-sm-4">
@@ -130,42 +124,21 @@
                             Our Company
                         </h1>
                         <ul class="page-footer-list">
-                            <li>
-                                <i class="fa fa-angle-right"></i>
-                                <a href="about.html">About Us</a>
-                            </li>
-                            <li>
-                                <i class="fa fa-angle-right"></i>
-                                <a href="faq.html">Support</a>
-                            </li>
-                            <li>
-                                <i class="fa fa-angle-right"></i>
-                                <a href="service.html">Service</a>
-                            </li>
-                            <li>
-                                <i class="fa fa-angle-right"></i>
-                                <a href="privacy-policy.html">Privacy Policy</a>
-                            </li>
-                            <li>
-                                <i class="fa fa-angle-right"></i>
-                                <a href="career.html">We are Hiring</a>
-                            </li>
-                            <li>
-                                <i class="fa fa-angle-right"></i>
-                                <a href="terms.html">Term & condition</a>
-                            </li>
+                            @Html.Partial("MainMenu")
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-4">
                     <div class="text-footer wow fadeInUp" data-wow-duration="2s" data-wow-delay=".7s">
-                        <h1>
-                            Text Widget
-                        </h1>
-                        <p>
-                            This is a text widget.Lorem ipsum dolor sit amet.
-                            This is a text widget.Lorem ipsum dolor sit amet.
-                        </p>
+                        <div class="page-footer wow fadeInUp" data-wow-duration="2s" data-wow-delay=".5s">
+                            <h1>
+                                Site Map
+                            </h1>
+                            <ul class="page-footer-list">
+                                @Html.Partial("Menu")
+                            </ul>
+                        </div>
+                        
                     </div>
                 </div>
             </div>
@@ -176,21 +149,10 @@
     <footer class="footer-small">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-sm-6 pull-right">
-                    <ul class="social-link-footer list-unstyled">
-                        <li class="wow flipInX" data-wow-duration="2s" data-wow-delay=".1s"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                        <li class="wow flipInX" data-wow-duration="2s" data-wow-delay=".2s"><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                        <li class="wow flipInX" data-wow-duration="2s" data-wow-delay=".3s"><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                        <li class="wow flipInX" data-wow-duration="2s" data-wow-delay=".4s"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        <li class="wow flipInX" data-wow-duration="2s" data-wow-delay=".5s"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                        <li class="wow flipInX" data-wow-duration="2s" data-wow-delay=".6s"><a href="#"><i class="fa fa-skype"></i></a></li>
-                        <li class="wow flipInX" data-wow-duration="2s" data-wow-delay=".7s"><a href="#"><i class="fa fa-github"></i></a></li>
-                        <li class="wow flipInX" data-wow-duration="2s" data-wow-delay=".8s"><a href="#"><i class="fa fa-youtube"></i></a></li>
-                    </ul>
-                </div>
-                <div class="col-md-4">
+               
+                <div class="col-md-12">
                     <div class="copyright">
-                        <p>&copy; Copyright @DateTime.Now.Year - @MyConstant.Web_Name</p>
+                        <p>&copy; Copyright @DateTime.Now.Year - @MyConstant.Web_Name | @Html.ActionLink("Terms", "Article", "Home", new { articleKod = "ARTCL_TYPE_TERMS" }, new { @style = "color:#fff" }) | @Html.ActionLink("Fees", "Article", "Home", new { articleKod = "ARTCL_TYPE_FEES" }, new { @style = "color:#fff" }) | @Html.ActionLink("Privacy", "Article", "Home", new { articleKod = "ARTCL_TYPE_PRIVACY" }, new { @style = "color:#fff" })</p>
                     </div>
                 </div>
             </div>
