--- a/Views/Listing/Details.cshtml
+++ b/Views/Listing/Details.cshtml
@@ -160,11 +160,11 @@
                                 <br />
                                 <div class="col-md-6">
 
-                                    @Html.ActionLink("Appoint Agent", "Register", "Account", null, htmlAttributes: new { @class = "btn btn-danger btn-block" })
+                                    @Html.ActionLink("Appoint Agent", "Create", "AppointAgents", null, htmlAttributes: new { @class = "btn btn-danger btn-block" })
                                 </div>
                                 <div class="col-md-6">
 
-                                    @Html.ActionLink("Request POS", "Register", "Account", null, htmlAttributes: new { @class = "btn btn-primary btn-block" })
+                                    @Html.ActionLink("Request POS", "Create", "PosRequests", null, htmlAttributes: new { @class = "btn btn-primary btn-block" })
                                 </div>
                             </div>
                         </div>
