--- a/Views/Shared/MenuAdmin.cshtml
+++ b/Views/Shared/MenuAdmin.cshtml
@@ -11,4 +11,6 @@
     <li><a href="/Sak"><i class="fa fa-tags"></i>SAK</a></li>
     <li><a href="/Sk"><i class="fa fa-tags"></i>SK</a></li>
     <li><a href="/Menus"><i class="fa fa-tags"></i>Menus</a></li>
+    <li><a href="/AppointAgents"><i class="fa fa-tags"></i>AppointAgents</a></li>
+    
 }
