--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -232,7 +232,7 @@
                                         @if (item.listing.imageUrl == null)
                                         {
 
-                                            <img src="@MyConstant.property_img_default_url@item.listing.PropertyTypeId@MyConstant.file_jpg" alt="">
+                                            <img src="myapp/@MyConstant.property_img_default_url@item.listing.PropertyTypeId@MyConstant.file_jpg" alt="">
                                         }
                                         else
                                         {
@@ -275,7 +275,7 @@
                                         @if (item.listing.imageUrl == null)
                                         {
 
-                                            <img src="@MyConstant.property_img_default_url@item.listing.PropertyTypeId@MyConstant.file_jpg" alt="">
+                                            <img src="myapp/@MyConstant.property_img_default_url@item.listing.PropertyTypeId@MyConstant.file_jpg" alt="">
                                         }
                                         else
                                         {
