--- a/Views/Manage/Index.cshtml
+++ b/Views/Manage/Index.cshtml
@@ -92,7 +92,7 @@
                 <div class="blog-side-item">
                     <div class="category">
 
-                            <img src="/Manage/BarcodeImage" />
+                            <img src="Manage/BarcodeImage" />
 
                             <div class="input-group">
                                 <span class="input-group-btn">
