--- a/Views/Shared/MenuAdmin.cshtml
+++ b/Views/Shared/MenuAdmin.cshtml
@@ -1,16 +1,40 @@
 ﻿@using MVC5.Common
 @if (User.IsInRole(MyConstant.Role_Admin))
 {
-    <li><a href="/Listingadmin"><i class="fa fa-tags"></i>Listingadmin</a></li>
-    <li><a href="/MemberPackages"><i class="fa fa-tags"></i>MemberPackages</a></li>
-    <li><a href="/MembershipRequests"><i class="fa fa-tags"></i>MembershipRequests</a></li>
-    <li><a href="/News"><i class="fa fa-tags"></i>News</a></li>
-    <li><a href="/Articles"><i class="fa fa-tags"></i>Articles</a></li>
-    <li><a href="/PosRequests"><i class="fa fa-tags"></i>PosRequests</a></li>
-    <li><a href="/AffiliateComissions"><i class="fa fa-tags"></i>AffiliateComissions</a></li>
-    <li><a href="/Sak"><i class="fa fa-tags"></i>SAK</a></li>
-    <li><a href="/Sk"><i class="fa fa-tags"></i>SK</a></li>
-    <li><a href="/Menus"><i class="fa fa-tags"></i>Menus</a></li>
-    <li><a href="/AppointAgents"><i class="fa fa-tags"></i>AppointAgents</a></li>
-    
+   
+
+    <li>
+        @Html.ActionLink("Listingadmin", "Index", "Listingadmin")
+    </li>
+    <li>
+        @Html.ActionLink("MemberPackages", "Index", "MemberPackages")
+    </li>
+    <li>
+        @Html.ActionLink("MembershipRequests", "Index", "MembershipRequests")
+    </li>
+    <li>
+        @Html.ActionLink("News", "Index", "News")
+    </li>
+    <li>
+        @Html.ActionLink("Articles", "Index", "Articles")
+    </li>
+    <li>
+        @Html.ActionLink("PosRequests", "Index", "PosRequests")
+    </li>
+    <li>
+        @Html.ActionLink("AffiliateComissions", "Index", "AffiliateComissions")
+    </li>
+    <li>
+        @Html.ActionLink("SAK", "Index", "SAK")
+    </li>
+    <li>
+        @Html.ActionLink("SK", "Index", "SK")
+    </li>
+    <li>
+        @Html.ActionLink("Menus", "Index", "Menus")
+    </li>
+    <li>
+        @Html.ActionLink("AppointAgents", "Index", "AppointAgents")
+    </li>
+
 }
