--- a/Views/Manage/ChangePassword.cshtml
+++ b/Views/Manage/ChangePassword.cshtml
@@ -1,6 +1,7 @@
 ﻿@model MVC5.Models.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -34,7 +35,4 @@
             <input type="submit" value="Change password" class="btn btn-default" />
         </div>
     </div>
-}
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
 }
