--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -96,7 +96,7 @@
 
                 </div>
 
-            
+
 
 
 
@@ -124,7 +124,7 @@
 
                 </div>
 
-           
+
 
                 <div class="form-group col-md-3 wow fadeInRight">
 
@@ -158,16 +158,17 @@
 
                 </div>
 
+            </div><!-- /row -->
+
+            <div class="row">
+
                 <div class="form-group col-md-12 wow fadeInRight">
 
                     @Html.EditorFor(model => model.AuctionDate, new { htmlAttributes = new { @class = "form-control newsletter-input", @placeholder = "Auction Date)" } })
 
-
-
-
                 </div>
 
-                
+
 
             </div><!-- /row -->
 
