--- a/Views/Shared/footer.cshtml
+++ b/Views/Shared/footer.cshtml
@@ -7,7 +7,7 @@
                 <h1>
                     ABOUT @MyConstant.Web_Name
                 </h1>
-                @Html.Action("Test", "Home")
+                @Html.Action("GetArticleContent", "Home", new { articleKod = "ARTCL_TYPE_ABOUT" })
             </div>
 
             <div class="col-lg-4 col-sm-4">
