--- a/Views/Listing/Details.cshtml
+++ b/Views/Listing/Details.cshtml
@@ -100,7 +100,7 @@
                                 <div class="blog-img">
                                     @if (Model.imgUrl == null)
                                     {
-                                        <img src="~/Content/img/property-type/default/@Model.listing.PropertyTypeId@MyConstant.file_jpg" alt="" />
+                                        <img src="@Html.Action("GetImageUrl", "Home", new { id = Model.listing.PropertyTypeId})" alt="" />
                                     }
                                     else
                                     {
@@ -321,16 +321,16 @@
                                 
                                 <h2><i class="fa fa-calculator"></i> Loan Calculator</h2>
                                 <hr />
-                                <div class="form-group col-md-4">Loan Amount
+                                <div class="form-group col-md-4">Loan Amount (RM)
                                     <input type="text" class="form-control" name="amount" value="@Model.listing.Price" onkeyup="loanCalculater()">
                                     </div>
-                                <div class="form-group col-md-4">Interest Rate
+                                <div class="form-group col-md-4">Interest Rate (%)
                                     <input type="text" class="form-control" name="interest" value="4.5" onkeyup="loanCalculater()">
                                 </div>
-                                <div class="form-group col-md-4">Loan Term
+                                <div class="form-group col-md-4">Loan Term (Years)
                                     <input type="text" class="form-control" name="years" value="30" onkeyup="loanCalculater()">
                                 </div>
-                                <div class="form-group col-md-4">Monthly Payment
+                                <div class="form-group col-md-4">Monthly Payment (RM)
                                     <input type="text" class="form-control" readonly="readonly" name="monthly-payment">
                                 </div>
                                     
