--- a/Views/Listing/Index.cshtml
+++ b/Views/Listing/Index.cshtml
@@ -92,7 +92,7 @@
                                         @if (item.imgUrl == null)
                                         {
 
-                                            <img class="media-object-large" src="@MyConstant.property_img_default_url@item.listing.PropertyTypeId@MyConstant.file_jpg" alt="">
+                                            <img class="media-object-large" src="@Html.Action("GetImageUrl", "Home", new { id = item.listing.PropertyTypeId})" alt="">
                                         }
                                         else
                                         {
